# correlcon_ssdg_clf

./: .gitignore  README.md  pyproject.toml
correlcon_ssdg_clf/: helpers.py  modal_region_names.py
documents/: literature_review.md  media_coverage.md  tasks.md  tool_research.md
documents/presentation/: slides.css  slides.html  slides.md
notebooks/: exploration.ipynb  pt_tfidf_log_reg.ipynb
scripts/: load_data.py  train_model.py
