[tool.poetry]
name = "correlcon-ssdg-clf"
version = "0.1.0"
description = ""
authors = ["jstet <mail@jstet.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
polars = "^1.9.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
