[tool.poetry]
name = "correlcon-ssdg-clf"
version = "0.1.0"
description = ""
authors = ["jstet <mail@jstet.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
polars = "^1.9.0"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
iterative-stratification = "^0.1.8"
scikit-multilearn-ng = "^0.0.8"
modal-client = "^0.64.178"
codecarbon = "^2.7.1"
country-converter = "^1.2"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
